<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default">

        <EditText
            android:id="@+id/dialog_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/dialog_hour_hint"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text=":"/>


        <EditText
            android:id="@+id/dialog_minute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/dialog_minute_hint"
            android:layout_weight="1"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/dialog_negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_marginRight="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/dialog_negative"/>

</LinearLayout>