<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.apps.ghost.bateponto.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_large"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/balance_text_size"
            android:text="@string/home_balance"
            android:layout_marginRight="@dimen/margin_default"/>

        <TextView
            android:id="@+id/home_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            android:padding="@dimen/balance_padding"
            android:textSize="@dimen/balance_value_size"
            android:text="@string/home_empty_hour"/>
    </LinearLayout>

    <Button
        android:id="@+id/home_clock_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/home_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/home_start_time"/>
            <TextView
                android:id="@+id/home_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_small"
                android:textSize="@dimen/balance_value_size"
                android:text="@string/home_empty_hour"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/home_end_time"/>
            <TextView
                android:id="@+id/home_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_small"
                android:textSize="@dimen/balance_value_size"
                android:text="@string/home_empty_hour"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
